# energyawarepathplannerROS

./: .gitignore  CMakeLists.txt  LICENSE  bgp_plugin.xml  costmap_plugins.xml  package.xml
config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  energy_aware_planner_params.yaml  planner_global.yaml  planner_local.yaml
include/: energy_zone_layer.h
include/enawpl/: navfn.h  navfn_ros.h  potarr_point.h
launch/: localization.launch  move_base.launch  move_base_zone.launch
maps/: maze.yaml
scripts/: battery_publisher.py  click_to_pt.py  demo_map_editor.py  zone_visualizer.py
src/: energy_zone_layer.cpp  navfn.cpp  navfn_node.cpp  navfn_ros.cpp  read_pgm_costmap.cpp
src/navtest/: navtest.cpp  navwin.cpp  navwin.h
test/: CMakeLists.txt  path_calc_test.cpp
